extends Node
## GameRoot - Point d'entrÃ©e unique du jeu
## ScÃ¨ne autoload principale qui instancie et expose tous les systÃ¨mes globaux
##
## Configuration : Ajouter GameRoot.tscn comme autoload nommÃ© "GameRoot"
## AccÃ¨s : GameRoot.event_bus, GameRoot.scene_loader, etc.

class_name GameRootClass

# ============================================================================
# RÃ‰FÃ‰RENCES EXPOSÃ‰ES (accÃ¨s via GameRoot.xxx)
# ============================================================================

var event_bus: EventBusClass = null
var scene_loader: SceneLoaderClass = null
var game_manager: GameManagerClass = null
var ui_manager: UIManagerClass = null
var debug_overlay: DebugOverlayClass = null
var global_logger: GlobalLoggerClass = null
var battle_data_manager: BattleDataManagerClass = null
var dialogue_manager: DialogueManagerClass = null
var version_manager: VersionManagerClass = null
var team_manager = null  # TeamManager n'a pas de class_name typÃ©

# ============================================================================
# CONTENEUR DE SCÃˆNES
# ============================================================================

var scene_container: Node = null
var current_scene: Node = null

# ============================================================================
# CONFIGURATION DES SCRIPTS
# ============================================================================

const SCRIPTS = {
	"event_bus": "res://core/autoloads/event_bus.gd",
	"global_logger": "res://core/autoloads/global_logger.gd",
	"scene_loader": "res://core/autoloads/scene_loader.gd",
	"game_manager": "res://core/autoloads/game_manager.gd",
	"ui_manager": "res://core/autoloads/ui_manager.gd",
	"debug_overlay": "res://core/autoloads/debug_overlay.gd",
	"battle_data_manager": "res://core/autoloads/battle_data_manager.gd",
	"dialogue_manager": "res://core/autoloads/dialogue_manager.gd",
	"version_manager": "res://core/autoloads/version_manager.gd",
	"team_manager": "res://core/autoloads/team_manager.gd"
}

# ============================================================================
# Ã‰TAT
# ============================================================================

var _is_initialized: bool = false

# ============================================================================
# INITIALISATION
# ============================================================================

func _ready() -> void:
	if _is_initialized:
		push_warning("[GameRoot] DÃ©jÃ  initialisÃ©, skip")
		return
	
	name = "GameRoot"
	
	print("========================================")
	print("  GAME ROOT - Initialisation")
	print("========================================")
	
	# Ordre d'initialisation important !
	_setup_scene_container()
	_initialize_core_systems()
	_initialize_managers()
	_initialize_ui_systems()
	_connect_systems()
	_check_migrations()
	
	_is_initialized = true
	
	print("========================================")
	print("  GAME ROOT - PrÃªt !")
	print("========================================")
	
	# Charger la scÃ¨ne initiale
	call_deferred("_load_initial_scene")

func _setup_scene_container() -> void:
	"""Configure le conteneur de scÃ¨nes (crÃ©Ã© dans la .tscn ou dynamiquement)"""
	
	# Chercher le SceneContainer existant dans la scÃ¨ne
	scene_container = get_node_or_null("SceneContainer")
	
	if not scene_container:
		# CrÃ©er dynamiquement si non prÃ©sent dans la scÃ¨ne
		scene_container = Node.new()
		scene_container.name = "SceneContainer"
		add_child(scene_container)
		print("[GameRoot]   â†’ SceneContainer crÃ©Ã© dynamiquement")
	else:
		print("[GameRoot]   â†’ SceneContainer trouvÃ© dans la scÃ¨ne")

func _initialize_core_systems() -> void:
	"""Initialise les systÃ¨mes de base (EventBus, Logger)"""
	
	# 1. Global Logger (en premier pour les logs)
	global_logger = _create_system("global_logger", "GlobalLogger") as GlobalLoggerClass
	
	# 2. Event Bus (communication globale)
	event_bus = _create_system("event_bus", "EventBus") as EventBusClass
	
	print("[GameRoot] âœ… SystÃ¨mes de base initialisÃ©s")

func _initialize_managers() -> void:
	"""Initialise les managers principaux"""
	
	# 3. Scene Loader
	scene_loader = _create_system("scene_loader", "SceneLoader") as SceneLoaderClass
	scene_loader.scene_container = scene_container
	
	# 4. Game Manager
	game_manager = _create_system("game_manager", "GameManager") as GameManagerClass
	game_manager.scene_loader = scene_loader
	
	# 5. Battle Data Manager
	battle_data_manager = _create_system("battle_data_manager", "BattleDataManager") as BattleDataManagerClass
	
	# 6. Dialogue Manager
	dialogue_manager = _create_system("dialogue_manager", "DialogueManager") as DialogueManagerClass
	
	# 7. Version Manager
	version_manager = _create_system("version_manager", "VersionManager") as VersionManagerClass
	
	# 8. Team Manager
	team_manager = _create_system("team_manager", "TeamManager")
	
	print("[GameRoot] âœ… Managers initialisÃ©s")

func _initialize_ui_systems() -> void:
	"""Initialise les systÃ¨mes UI (au-dessus des scÃ¨nes)"""
	
	# 9. UI Manager (CanvasLayer pour UI globale)
	ui_manager = _create_system("ui_manager", "UIManager") as UIManagerClass
	
	# 10. Debug Overlay (en dernier, layer le plus haut) - seulement en debug
	if OS.is_debug_build():
		debug_overlay = _create_system("debug_overlay", "DebugOverlay") as DebugOverlayClass
	
	print("[GameRoot] âœ… SystÃ¨mes UI initialisÃ©s")

func _create_system(key: String, node_name: String) -> Node:
	"""CrÃ©e et ajoute un systÃ¨me depuis son script.
	DÃ©tecte automatiquement le type natif hÃ©ritÃ© (Node, CanvasLayer, etc.)"""
	
	var script_path = SCRIPTS.get(key, "")
	
	if script_path == "":
		push_error("[GameRoot] ClÃ© de script introuvable : %s" % key)
		return null
	
	if not ResourceLoader.exists(script_path):
		push_error("[GameRoot] Script introuvable : %s" % script_path)
		return null
	
	var script = load(script_path)
	if not script:
		push_error("[GameRoot] Ã‰chec du chargement du script : %s" % script_path)
		return null
	
	# ðŸ”¥ FIX : DÃ©tecter le type natif hÃ©ritÃ© par le script
	# pour instancier le bon type de base (Node, CanvasLayer, etc.)
	var base_type: String = script.get_instance_base_type()
	var instance: Node
	
	match base_type:
		"CanvasLayer":
			instance = CanvasLayer.new()
		"Control":
			instance = Control.new()
		"Node2D":
			instance = Node2D.new()
		"Node3D":
			instance = Node3D.new()
		_:
			instance = Node.new()
	
	instance.set_script(script)
	instance.name = node_name
	
	add_child(instance)
	
	print("[GameRoot]   â†’ %s chargÃ© (%s)" % [node_name, base_type])
	return instance

func _connect_systems() -> void:
	"""Connecte les systÃ¨mes entre eux via l'EventBus"""
	
	if not event_bus:
		push_error("[GameRoot] EventBus non initialisÃ©, impossible de connecter les systÃ¨mes")
		return
	
	# Connecter SceneLoader aux Ã©vÃ©nements
	if scene_loader:
		event_bus.safe_connect("scene_change_requested", scene_loader._on_scene_change_requested)
	
	# Connecter GameManager aux Ã©vÃ©nements
	if game_manager:
		event_bus.safe_connect("game_started", game_manager._on_game_started)
		event_bus.safe_connect("game_paused", game_manager._on_game_paused)
		event_bus.safe_connect("quit_game_requested", game_manager._on_quit_game_requested)
		event_bus.safe_connect("return_to_menu_requested", game_manager._on_return_to_menu_requested)
	
	# Connecter UIManager aux notifications
	if ui_manager:
		event_bus.safe_connect("notification_posted", ui_manager._on_notification_posted)
	
	print("[GameRoot] âœ… SystÃ¨mes connectÃ©s")

func _check_migrations() -> void:
	"""VÃ©rifie et applique les migrations de donnÃ©es si nÃ©cessaire"""
	
	if version_manager:
		version_manager.check_and_migrate()

func _load_initial_scene() -> void:
	"""Charge la scÃ¨ne initiale (menu principal)"""
	
	if scene_loader:
		# VÃ©rifier si le menu principal existe
		if SceneRegistry.scene_exists(SceneRegistry.SceneID.MAIN_MENU):
			scene_loader.load_scene_by_id(SceneRegistry.SceneID.MAIN_MENU, false)
		else:
			push_warning("[GameRoot] Menu principal non trouvÃ©, aucune scÃ¨ne chargÃ©e")

# ============================================================================
# CALLBACKS SCÃˆNE (appelÃ©s par SceneLoader)
# ============================================================================

func _on_scene_loaded(scene: Node) -> void:
	"""AppelÃ© par SceneLoader quand une nouvelle scÃ¨ne est chargÃ©e"""
	current_scene = scene
	
	if global_logger:
		global_logger.info("SCENE", "ScÃ¨ne chargÃ©e : %s" % scene.name)

func _on_scene_unloaded() -> void:
	"""AppelÃ© par SceneLoader quand la scÃ¨ne actuelle est dÃ©chargÃ©e"""
	current_scene = null

# ============================================================================
# API PUBLIQUE (Raccourcis)
# ============================================================================

## Raccourci pour changer de scÃ¨ne
func change_scene(scene_id: int, transition: bool = true) -> void:
	if scene_loader:
		scene_loader.load_scene_by_id(scene_id, transition)

## Raccourci pour changer de scÃ¨ne par chemin
func change_scene_by_path(scene_path: String, transition: bool = true) -> void:
	if scene_loader:
		scene_loader.load_scene(scene_path, transition)

## Raccourci pour Ã©mettre une notification
func notify(message: String, type: String = "info") -> void:
	if event_bus:
		event_bus.notify(message, type)

## Raccourci pour logger
func log_info(category: String, message: String) -> void:
	if global_logger:
		global_logger.info(category, message)

func log_debug(category: String, message: String) -> void:
	if global_logger:
		global_logger.debug(category, message)

func log_warning(category: String, message: String) -> void:
	if global_logger:
		global_logger.warning(category, message)

func log_error(category: String, message: String) -> void:
	if global_logger:
		global_logger.error(category, message)

# ============================================================================
# GETTERS POUR COMPATIBILITÃ‰
# ============================================================================

func get_current_scene() -> Node:
	"""Retourne la scÃ¨ne actuellement chargÃ©e"""
	return current_scene

func get_current_scene_id() -> int:
	"""Retourne l'ID de la scÃ¨ne actuelle"""
	return scene_loader.current_scene_id if scene_loader else -1

func is_loading() -> bool:
	"""VÃ©rifie si un chargement est en cours"""
	return scene_loader.is_loading if scene_loader else false

func is_initialized() -> bool:
	"""VÃ©rifie si GameRoot est complÃ¨tement initialisÃ©"""
	return _is_initialized

# ============================================================================
# ACCÃˆS AUX SYSTÃˆMES (pour compatibilitÃ© avec l'ancien code)
# ============================================================================

func get_event_bus() -> EventBusClass:
	return event_bus

func get_scene_loader() -> SceneLoaderClass:
	return scene_loader

func get_game_manager() -> GameManagerClass:
	return game_manager

func get_ui_manager() -> UIManagerClass:
	return ui_manager

func get_global_logger() -> GlobalLoggerClass:
	return global_logger

func get_battle_data_manager() -> BattleDataManagerClass:
	return battle_data_manager

func get_dialogue_manager() -> DialogueManagerClass:
	return dialogue_manager

# ============================================================================
# DEBUG
# ============================================================================

func _input(event: InputEvent) -> void:
	if OS.is_debug_build():
		# Toggle debug overlay avec F3
		if event.is_action_pressed("debug_toggle") and debug_overlay:
			debug_overlay.toggle_visibility()

func print_status() -> void:
	"""Affiche l'Ã©tat de tous les systÃ¨mes"""
	
	print("\n=== GameRoot Status ===")
	print("  Initialized: ", _is_initialized)
	print("  EventBus: ", "OK" if event_bus else "NULL")
	print("  GlobalLogger: ", "OK" if global_logger else "NULL")
	print("  SceneLoader: ", "OK" if scene_loader else "NULL")
	print("  GameManager: ", "OK" if game_manager else "NULL")
	print("  UIManager: ", "OK" if ui_manager else "NULL")
	print("  BattleDataManager: ", "OK" if battle_data_manager else "NULL")
	print("  DialogueManager: ", "OK" if dialogue_manager else "NULL")
	print("  VersionManager: ", "OK" if version_manager else "NULL")
	print("  TeamManager: ", "OK" if team_manager else "NULL")
	print("  DebugOverlay: ", "OK" if debug_overlay else "N/A (release)")
	print("  SceneContainer: ", "OK" if scene_container else "NULL")
	print("  CurrentScene: ", current_scene.name if current_scene else "None")
	print("========================\n")

func debug_list_children() -> void:
	"""Liste tous les enfants de GameRoot (debug)"""
	
	print("\n=== GameRoot Children ===")
	for child in get_children():
		print("  - ", child.name, " (", child.get_class(), ")")
	print("=========================\n")
